--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -351,5 +351,76 @@
     "TEXT": [
       "你可以选择至多 ", " 张东国牌。"
     ]
+  },
+
+  "PheasantAction": {
+    "TEXT": [
+      "return to bottom of Draw Pile."
+    ]
+  },
+
+  "PotalAction": {
+    "TEXT": [
+      "Choose up to ", " Aerial cards to send to Discard Pile.",
+      "Choose an Aerial card to send to Discard Pile.",
+      "I don't have Aerial cards in Draw Pile..."
+    ]
+  },
+
+  "PuniruAction": {
+    "TEXT": [
+      "Choose 1 card to add to your hand."
+    ]
+  },
+
+  "AmelieAction": {
+    "TEXT": [
+      "Select a Sailor Attack Card to add to hand.",
+      "I don't have a Sailor Attack Card in Draw Pile..."
+    ]
+  },
+
+  "RenataAction": {
+    "TEXT": [
+      "Choose up to ", " cards to send to Discard Pile."
+    ]
+  },
+
+  "ThrudAction": {
+    "TEXT": [
+      "Choose 1 Aerial card to send to Discard Pile."
+    ]
+  },
+
+  "JacquelineAction": {
+    "TEXT": [
+      "Select a Sailor or Deep Sea card to add to hand.",
+      "I don't have a Sailor or Deep Sea card in Discard Pile..."
+    ]
+  },
+
+  "NoelAction": {
+    "TEXT": [
+      "duplicate."
+    ]
+  },
+
+  "ShirleyAction": {
+    "TEXT": [
+      "Choose a Spirit User, Elemental, Summoner or Summon card to add to hand from Draw Pile or Discard Pile.",
+      "Choose up to 2 Spirit User, Elemental, Summoner or Summon cards to add to hand from Draw Pile or Discard Pile."
+    ]
+  },
+
+  "RefletAction": {
+    "TEXT": [
+      "Choose a Light Elemental to add to hand from Draw Pile or Discard Pile."
+    ]
+  },
+
+  "LatourAction": {
+    "TEXT": [
+      "keep."
+    ]
   }
 }
