--- a/localization/kor/AigisMod-Relic-Strings.json
+++ b/localization/kor/AigisMod-Relic-Strings.json
@@ -220,7 +220,7 @@
       "#y타격과 #y수비 카드의 코스트가 #b0 이 됩니다."
     ]
   },
-  "aigisMod:AerialFight": {
+  "aigisMod:AerialFight00": {
     "NAME": "공중전",
     "FLAVOR": "케이트릿지 : 하늘보다 높게, 바람보다 빠르게! 하늘을 나는 나는 멋져!",
     "DESCRIPTIONS": [
@@ -463,7 +463,7 @@
   },
 
 
-  "aigisMod:Miracle": {
+  "aigisMod:Miracle00": {
     "NAME": "기적 ",
     "FLAVOR": "여신 아이기스 : 인간이여, 포기하지 마십시오. 제가 당신에게 힘을 빌려드릴게요.",
     "DESCRIPTIONS": [
@@ -472,6 +472,97 @@
     ]
   },
 
+
+
+  "aigisMod:Endurance": {
+    "NAME": "Endurance Up",
+    "FLAVOR": "Dan: Reaching beyond my limits is my reason for living!",
+    "DESCRIPTIONS": [
+      "Gain #b2 #yTemporal #yHP when you play a card that was created in combat.",
+      "Usable up to #b5 times per turn."
+    ]
+  },
+  "aigisMod:Miracle": {
+    "NAME": "Miracle Man",
+    "FLAVOR": "Goddess Aigis: Don't give up, humans. For now, I, Goddess Aigis, will lend you my power.",
+    "DESCRIPTIONS": [
+      "Gain #b3 #yTemporal #yHP when you play a card that was created in combat.",
+      "Usable up to #b5 times per turn."
+    ]
+  },
+  "aigisMod:DepthTorpedo": {
+    "NAME": "Depth Torpedo",
+    "FLAVOR": "Wirbel: I wish I could dive into people's minds and solve everything.",
+    "DESCRIPTIONS": [
+      "The first time in a combat you lose HP while you have #yWater #yPressure, all enemies lose #b2 #yStrength."
+    ]
+  },
+  "aigisMod:SharkTide": {
+    "NAME": "Shark Tide",
+    "FLAVOR": "Fine: I came from an underwater city. I'll do my best to study the dry land!",
+    "DESCRIPTIONS": [
+      "Gain [E] at the start of turn if you have #b2 or more #yWater #yPressure."
+    ]
+  },
+  "aigisMod:AerialFight": {
+    "NAME": "Rampage Takeoff",
+    "FLAVOR": "Krehl: I'm Krehl, the Security Forces Flight Commander. Um, can I go now?",
+    "DESCRIPTIONS": [
+      "Draw #b1 card when you draw an #yAir #ySignal. Usable #yTwice per turn and while you have cards in your #ydraw #ypile."
+    ]
+  },
+  "aigisMod:CaitSith": {
+    "NAME": "Cait Sith",
+    "FLAVOR": "Farne: I'm reading right now. ...Don't interrupt me.",
+    "DESCRIPTIONS": [
+      "Every #b10th #ycard #ycreated in a single combat (except in exhaust pile), add #b1 #yCait #ySith to your #yhand."
+    ]
+  },
+  "aigisMod:PumpUp": {
+    "NAME": "Pump Up",
+    "FLAVOR": "Gina: Men are so one-dimensional, eh?",
+    "DESCRIPTIONS": [
+      "At the start of your #b3rd turn, gain #b3 #yVigor, #b3 #yTemporal #yHP and #yHeal #b3 #yHP."
+    ]
+  },
+  "aigisMod:AutoHeal": {
+    "NAME": "Auto Heal",
+    "FLAVOR": "Ur: With these claws, I can even defeat demons!",
+    "DESCRIPTIONS": [
+      "At the start of your turn, deal #b1 #ydamage to ALL #yenemies. ",
+      "At the end of your turn, gain #b1 #yTemporal #yHP."
+    ]
+  },
+  "aigisMod:PearlGrace": {
+    "NAME": "Pearls' Grace",
+    "FLAVOR": "Ritva: There are many strong warriors in the deep sea. I must learn from them...!",
+    "DESCRIPTIONS": [
+      "At the start of the combat, apply #b1 #yWater #bPressure to ALL #yenemies.",
+      "Whenever you play #yDeep #bSea, deal #y3 #ydamage to a #yrandom #yenemy."
+    ]
+  },
+  "aigisMod:FiringCommand": {
+    "NAME": "Firing Command",
+    "FLAVOR": "Reanbell: As long as I am with you, any disadvantage turns into an advantage.",
+    "DESCRIPTIONS": [
+      "#ySailor cards apply their full effects even if #yWater #bPressure is not reduced."
+    ]
+  },
+  "aigisMod:VitalityMedicine": {
+    "NAME": "Secret Medicine of Vitality",
+    "FLAVOR": "Nicole: First of all, let's convert this place into an atelier. Assistant, can you bring my luggage?",
+    "DESCRIPTIONS": [
+      "#yCancel any #yDamage coming from yourself during the #yfirst #b2 #yturns of each combat. ",
+      "Gain #y1 #yPotion #ySlot."
+    ]
+  },
+  "aigisMod:AigisStatue": {
+    "NAME": "Aigis Statue",
+    "FLAVOR": "Anna: But you can draw out her summon ability.",
+    "DESCRIPTIONS": [
+      "Create a number of #yAigis #yStatue at the start of combat. Increase this amount by #b2 at the end of combat."
+    ]
+  },
 
 
 
@@ -497,6 +588,15 @@
     ]
   },
   "aigisMod:AigisShrineKnight": {
+    "NAME": "아이기스 신전",
+    "FLAVOR": "영웅을 위해 사람들은 하나의 큰 신전을 세웠다. 바로 여신 아이기스를 모시는 신전이다.",
+    "DESCRIPTIONS": [
+      "일반 전투와 엘리트 전투에서 추가 #y카드 #y보상을 얻습니다. 여기에는 다른 아이기스 캐릭터의 카드가 최대 #b3 장 추가됩니다."
+    ]
+  },
+
+
+  "aigisMod:AigisShrineMiracle": {
     "NAME": "아이기스 신전",
     "FLAVOR": "영웅을 위해 사람들은 하나의 큰 신전을 세웠다. 바로 여신 아이기스를 모시는 신전이다.",
     "DESCRIPTIONS": [
