--- a/localization/zhs/AigisMod-Character-Strings.json
+++ b/localization/zhs/AigisMod-Character-Strings.json
@@ -42,5 +42,17 @@
       "你将用特殊的技术攻击心脏。",
       "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~骑士。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
     ]
+  },
+
+  "aigisMod:TheMiracleManCharacter": {
+    "NAMES": [
+      "The Miracle Man",
+      "the Miracle Man"
+    ],
+    "TEXT": [
+      "Dan, a martial artist, is always pursuing power. Looking for enemies stronger than himself, this monk will ascend the Spire.",
+      "You fire up, knowing you are gonna get a tough opponent to fight",
+      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~monk,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+    ]
   }
 }
