--- a/localization/zhs/AigisMod-Relic-Strings.json
+++ b/localization/zhs/AigisMod-Relic-Strings.json
@@ -220,7 +220,7 @@
       " #y打击 和 #y防御 的消耗变为 #b0 。"
     ]
   },
-  "aigisMod:AerialFight": {
+  "aigisMod:AerialFight00": {
     "NAME": "空域战斗",
     "FLAVOR": "凯特丽姬：比天更高，比风更快！在天空飞行的我帅呆了！",
     "DESCRIPTIONS": [
@@ -458,6 +458,95 @@
 
 
 
+  "aigisMod:Endurance": {
+    "NAME": "Endurance Up",
+    "FLAVOR": "Dan: Reaching beyond my limits is my reason for living!",
+    "DESCRIPTIONS": [
+      "Gain #b2 #yTemporal #yHP when you play a card that was created in combat.",
+      "Usable up to #b5 times per turn."
+    ]
+  },
+  "aigisMod:Miracle": {
+    "NAME": "Miracle Man",
+    "FLAVOR": "Goddess Aigis: Don't give up, humans. For now, I, Goddess Aigis, will lend you my power.",
+    "DESCRIPTIONS": [
+      "Gain #b3 #yTemporal #yHP when you play a card that was created in combat.",
+      "Usable up to #b5 times per turn."
+    ]
+  },
+  "aigisMod:DepthTorpedo": {
+    "NAME": "Depth Torpedo",
+    "FLAVOR": "Wirbel: I wish I could dive into people's minds and solve everything.",
+    "DESCRIPTIONS": [
+      "The first time in a combat you lose HP while you have #yWater #yPressure, all enemies lose #b2 #yStrength."
+    ]
+  },
+  "aigisMod:SharkTide": {
+    "NAME": "Shark Tide",
+    "FLAVOR": "Fine: I came from an underwater city. I'll do my best to study the dry land!",
+    "DESCRIPTIONS": [
+      "Gain [E] at the start of turn if you have #b2 or more #yWater #yPressure."
+    ]
+  },
+  "aigisMod:AerialFight": {
+    "NAME": "Rampage Takeoff",
+    "FLAVOR": "Krehl: I'm Krehl, the Security Forces Flight Commander. Um, can I go now?",
+    "DESCRIPTIONS": [
+      "Draw #b1 card when you draw an #yAir #ySignal. Usable #yTwice per turn and while you have cards in your #ydraw #ypile."
+    ]
+  },
+  "aigisMod:CaitSith": {
+    "NAME": "Cait Sith",
+    "FLAVOR": "Farne: I'm reading right now. ...Don't interrupt me.",
+    "DESCRIPTIONS": [
+      "Every #b10th #ycard #ycreated in a single combat (except in exhaust pile), add #b1 #yCait #ySith to your #yhand."
+    ]
+  },
+  "aigisMod:PumpUp": {
+    "NAME": "Pump Up",
+    "FLAVOR": "Gina: Men are so one-dimensional, eh?",
+    "DESCRIPTIONS": [
+      "At the start of your #b3rd turn, gain #b3 #yVigor, #b3 #yTemporal #yHP and #yHeal #b3 #yHP."
+    ]
+  },
+  "aigisMod:AutoHeal": {
+    "NAME": "Auto Heal",
+    "FLAVOR": "Ur: With these claws, I can even defeat demons!",
+    "DESCRIPTIONS": [
+      "At the start of your turn, deal #b1 #ydamage to ALL #yenemies. ",
+      "At the end of your turn, gain #b1 #yTemporal #yHP."
+    ]
+  },
+  "aigisMod:PearlGrace": {
+    "NAME": "Pearls' Grace",
+    "FLAVOR": "Ritva: There are many strong warriors in the deep sea. I must learn from them...!",
+    "DESCRIPTIONS": [
+      "At the start of the combat, apply #b1 #yWater #bPressure to ALL #yenemies.",
+      "Whenever you play #yDeep #bSea, deal #y3 #ydamage to a #yrandom #yenemy."
+    ]
+  },
+  "aigisMod:FiringCommand": {
+    "NAME": "Firing Command",
+    "FLAVOR": "Reanbell: As long as I am with you, any disadvantage turns into an advantage.",
+    "DESCRIPTIONS": [
+      "#ySailor cards apply their full effects even if #yWater #bPressure is not reduced."
+    ]
+  },
+  "aigisMod:VitalityMedicine": {
+    "NAME": "Secret Medicine of Vitality",
+    "FLAVOR": "Nicole: First of all, let's convert this place into an atelier. Assistant, can you bring my luggage?",
+    "DESCRIPTIONS": [
+      "#yCancel any #yDamage coming from yourself during the #yfirst #b2 #yturns of each combat. ",
+      "Gain #y1 #yPotion #ySlot."
+    ]
+  },
+  "aigisMod:AigisStatue": {
+    "NAME": "Aigis Statue",
+    "FLAVOR": "Anna: But you can draw out her summon ability.",
+    "DESCRIPTIONS": [
+      "Create a number of #yAigis #yStatue at the start of combat. Increase this amount by #b2 at the end of combat."
+    ]
+  },
 
 
 
@@ -483,6 +572,14 @@
     ]
   },
   "aigisMod:AigisShrineKnight": {
+    "NAME": "埃癸斯神殿",
+    "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
+    "DESCRIPTIONS": [
+      "普通和精英战斗后额外获得一组含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
+    ]
+  },
+
+  "aigisMod:AigisShrineMiracle": {
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
