--- a/localization/jpn/AigisMod-Character-Strings.json
+++ b/localization/jpn/AigisMod-Character-Strings.json
@@ -7,7 +7,7 @@
     "TEXT": [
       "英傑の塔での訓練中に奇妙なことが起こった。 NL 王子と仲間たちは今、尖塔と呼ばれる場所を探索している。",
       "あなたは仲間に心臓への攻撃を命じ…",
-      "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「王子よ我らと共に、そして塔の温もりを肌で感じるのだ」"
+      "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「 ~\王子よ我らと共に、そして塔の温もりを肌で感じるのだ\~ 」"
     ]
   },
   "aigisMod:TheEmperorCharacter": {
@@ -18,7 +18,7 @@
     "TEXT": [
       "白の皇帝は調査隊を率いて尖塔に隠された不思議な力を調査している。",
       "仲間と共に心臓を攻撃し…",
-      "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「戦士よ我らと共に、そして塔の温もりを肌で感じるのだ」"
+      "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「 ~\戦士よ我らと共に、そして塔の温もりを肌で感じるのだ\~ 」"
     ]
   },
   "aigisMod:TheAvengerCharacter": {
@@ -29,7 +29,7 @@
     "TEXT": [
       "ヴィンセントは家族を救えなかったことへの贖罪の旅をしている。 NL 彼は今、尖塔を探索しているが、その姿は一人ではなかった。",
       "あなたは心臓に対して最後の切り札を構え…",
-      "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「狩人よ我らと共に、そして塔の温もりを肌で感じるのだ」"
+      "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「 ~\狩人よ我らと共に、そして塔の温もりを肌で感じるのだ\~ 」"
     ]
   },
   "aigisMod:TheDarkKnightCharacter": {
@@ -40,19 +40,19 @@
     "TEXT": [
       "リビングアーマーとなった戦士は星の声に導かれた。 NL 塔を通じてなにか大切なものを発見するかもしれない。",
       "あなたは心臓に向かって奥義を放ち…",
-      "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「騎士よ我らと共に、そして塔の温もりを感じるのだ」"
+      "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「 ~\騎士よ我らと共に、そして塔の温もりを感じるのだ\~ 」"
     ]
   },
 
   "aigisMod:TheMiracleManCharacter": {
     "NAMES": [
-      "The Miracle Man",
-      "the Miracle Man"
+      "奇跡の男",
+      "奇跡の男"
     ],
     "TEXT": [
-      "Dan, a martial artist, is always pursuing power. Looking for enemies stronger than himself, this monk will ascend the Spire.",
-      "You fire up, knowing you are gonna get a tough opponent to fight",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~monk,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "格闘家ダン。 より強い力、より強い敵を求めて彼は塔を上る。",
+      "あなたは強敵との戦いに気持ちを昂ぶらせ…",
+      "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「 ~\拳士よ我らと共に、そして塔の温もりを感じるのだ\~ 」"
     ]
   }
 }
