--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -15,7 +15,7 @@
   },
   "aigisMod:Ate": {
     "NAME": "あて",
-    "FLAVOR": "「鬼を怒らせると怖いんだからね」-鬼刃姫",
+    "FLAVOR": "「あてだよ」-あて",
     "DESCRIPTIONS": [
       "本来のコストが #b4 のカードを引いた時、 [E] を得る。"
     ]
@@ -32,7 +32,7 @@
     "FLAVOR": "「時の支配者たる力、お見せしましょう」-トワ",
     "DESCRIPTIONS": [
       "#y鈍足 が #yスロー を解除しなくなる。",
-      " #yウィッチ をプレイした時、 1 枚ドローする。"
+      " #yウィッチ カードをプレイした時、 1 枚ドローする。"
     ]
   },
   "aigisMod:WhiteWitch": {
@@ -40,7 +40,7 @@
     "FLAVOR": "「お母さんはお節介なんです。私でも一人で出来るのに……」-ベリンダ",
     "DESCRIPTIONS": [
       "戦闘開始時 #y鈍足 #b1 (一時的な #yスロー )を与える。",
-      " 1ターンに #yウィッチ カードを #b2 枚プレイした時、すべての敵に #b3 ダメージを与える。"
+      " 1ターンに #yウィッチ カードを #b2 枚プレイした時、敵全体に #b3 ダメージを与える。"
     ]
   },
   "aigisMod:HealingTreasure": {
@@ -55,7 +55,7 @@
     "FLAVOR": "「すでに捨てた命だ捨て駒にでも使ってくれ……」-暗黒騎士",
     "DESCRIPTIONS": [
       "戦闘開始時、 #y暗黒騎士 を手札に加える。",
-      " #bアタック をプレイしなかったターン、 #b8 #yブロック を得て、全ての敵に #y脱力 #b1 を与える。"
+      " #bアタック をプレイしなかったターン、 #b8 #yブロック を得て、敵全体に #y脱力 #b1 を与える。"
     ]
   },
   "aigisMod:AegisTreasure": {
@@ -71,7 +71,7 @@
     "FLAVOR": "「ケラウノスに勝利した英雄であるあなたに、かの女神が有していた神器を授けさせてください」-依り代の少女",
     "DESCRIPTIONS": [
       "デッキに ケラウノスの神器を #b1 枚追加する。",
-      "あなたのターン終了時に [E] がない時、すべての敵に #b5 ダメージを与える。"
+      "あなたのターン終了時に [E] がない時、敵全体に #b5 ダメージを与える。"
     ]
   },
   "aigisMod:HeroKing": {
@@ -93,21 +93,21 @@
     "NAME": "ロイヤルハイネス",
     "FLAVOR": "「私と王子が王国を作ったら…きっとすてきだって思わない？」-シビラ",
     "DESCRIPTIONS": [
-      "1ターンに1回、 #yプリンセス をドローかプレイした時、 このターン中 #y筋力 #b1 と #y敏捷性 #b1 を得る。"
+      "1ターンに1回、 #yプリンセス カードをドローかプレイした時、 このターン中 #y筋力 #b1 と #y敏捷性 #b1 を得る。"
     ]
   },
   "aigisMod:FidelityHarmony": {
     "NAME": "半月の覚醒",
     "FLAVOR": "「政略結婚に過ぎなかったが……わたしはそなたが夫でよかった」-カグヤ",
     "DESCRIPTIONS": [
-      "デッキに #yカグヤ か #yヒカゲ (カグヤを持っている場合） を #b1 枚追加する。 #y東の国 か #y手裏剣 を #b5 枚プレイするたび、 [E] を得る。カウントは戦闘終了時にリセットされる"
+      "デッキに #yカグヤ か #yヒカゲ (カグヤを持っている場合） を #b1 枚追加する。 #y東の国 カードか #y手裏剣 を #b5 枚プレイするたび、 [E] を得る。カウントは戦闘終了時にリセットされる"
     ]
   },
   "aigisMod:HardFlame": {
     "NAME": "魔神の丸薬【剛炎】",
     "FLAVOR": "「鬼刃衆がひとり、セツナ見参！！━━どう？　かっこよかった！？」-セツナ",
     "DESCRIPTIONS": [
-      " #y手裏剣 が #b3 の追加ダメージを与える。一戦闘に1回、このレリックを #y右クリック すると #yHP を #b10 失い (このダメージに無形は無効) #y手札 に #yセツナ を #b1 枚加えることができる。"
+      " #y手裏剣 が #b3 の追加ダメージを与える。1戦闘に1回、このレリックを #y右クリック すると #yHP を #b10 失い (このダメージに無形は無効) #yセツナ を #b1 枚 #y手札 に加えることができる。"
     ]
   },
   "aigisMod:HeroCrystal": {
@@ -172,14 +172,14 @@
     "NAME": "帝国暗部",
     "FLAVOR": "「私はかつて帝国を震え上がらせた悪名高き大罪人だ。」-ヴィクター",
     "DESCRIPTIONS": [
-      "敵を #y撃破 した時、全ての敵に #y脱力 #b2 と #y弱体 #b2 を与える。"
+      "敵を #y撃破 した時、敵全体に #y脱力 #b2 と #y弱体 #b2 を与える。"
     ]
   },
   "aigisMod:WhiteDragon": {
     "NAME": "白竜の陣備え",
     "FLAVOR": "「もはや種族も国も関係なイ。」-サーベイン",
     "DESCRIPTIONS": [
-      " 1戦闘中に #y3 回発動する : 同じターン内で #y帝国 と #yデーモン をプレイした時、 [E] を得る。"
+      " 1戦闘中に #y3 回発動する : 同じターン内で #y帝国 と #yデーモン カード両方をプレイした時、 [E] を得る。"
     ]
   },
   "aigisMod:ImperialSniper": {
@@ -209,8 +209,8 @@
     "NAME": "魔神団長の号令",
     "FLAVOR": "「力で万事に臨むのは蛮族の思考だ。君の知性の程、試させてもらうぞ。」-メフィスト",
     "DESCRIPTIONS": [
-      "一戦闘中に1回、 このレリックを #y右クリック すると 手札を #b1 枚 #y廃棄 する。",
-      " NL この効果で #yデーモン を廃棄した時 #y筋力 #b1 を得る。"
+      "1戦闘中に1回、 このレリックを #y右クリック すると 手札を #b1 枚 #y廃棄 する。",
+      " NL この効果で #yデーモン カードを廃棄した時 #y筋力 #b1 を得る。"
     ]
   },
   "aigisMod:AdamasChosen": {
@@ -231,7 +231,7 @@
     "NAME": "マグヌムオプス",
     "FLAVOR": "「こう見えて白の帝国の公認の錬金術士なのよ？」-ヘルミーネ",
     "DESCRIPTIONS": [
-      "獲得時、ポーションスロットを #b1 得る。 #yポーション を使用した時、戦闘終了まで、手札の #yコモン と #yアンコモン カードを全て #yアップグレード する。 "
+      "獲得時、ポーションスロットを #b1 つ得る。 #yポーション を使用した時、戦闘終了まで、手札の #yコモン と #yアンコモン カードを全て #yアップグレード する。 "
     ]
   },
   "aigisMod:EmperorAwakening": {
@@ -246,7 +246,7 @@
     "FLAVOR": "「魔物になったリィーリを助けてくれて、ありがとうございます。」-リィーリ",
     "DESCRIPTIONS": [
       "1ターンに1回、 #yストライク のダメージが #y2 倍になる。",
-      "1ターンに1回、 #yストライク か #y防御 をプレイした時 #yデーモン を山札から #b1 枚 #y廃棄 できる。"
+      "1ターンに1回、 #yストライク か #y防御 をプレイした時 #yデーモン カードを山札から #b1 枚 #y廃棄 できる。"
     ]
   },
 
@@ -264,7 +264,7 @@
     "FLAVOR": "「あたしが持っている「破滅の力」は、うちの一族に受け継がれてるの一個だけね。」-カタラ",
     "DESCRIPTIONS": [
       "このレリックを獲得した時に、デッキに #y呪い があった場合、 #yアップグレード した #yカタラ を #b1 枚獲得する。",
-      " 1ターンに1回、 このレリックを を #y右クリック することで、手札の #y呪い カードを 1 枚捨てて全ての敵に #b5 ダメージを与える。",
+      " 1ターンに1回、 このレリックを を #y右クリック することで、手札の #y呪い カードを 1 枚捨てて敵全体に #b5 ダメージを与える。",
       "手札に呪いカードがない…"
     ]
   },
@@ -286,7 +286,7 @@
     "NAME": "天狗の火焔",
     "FLAVOR": "「理想の果てを見せてくれよ。それまで、力を貸してやるからよ。」-グレン",
     "DESCRIPTIONS": [
-      "1戦闘に1回、このレリックを #y右クリック することで手札 #b1 枚 を #y廃棄 できる。 そのカードが #y呪い か #y状態異常 の時、カードを #b1 枚ドローしてすべての敵に #b3 #yバーン を与える。"
+      "1戦闘に1回、このレリックを #y右クリック することで手札 #b1 枚 を #y廃棄 できる。 そのカードが #y呪い か #y状態異常 の時、カードを #b1 枚ドローして敵全体に #b3 #yバーン を与える。"
     ]
   },
   "aigisMod:CatDisturbance": {
@@ -321,21 +321,21 @@
     "NAME": "傷返の呪言",
     "FLAVOR": "「私にあなたの厄を祓わせてくれませんか？」-ミコト",
     "DESCRIPTIONS": [
-      "戦闘開始時、 #y式鬼 #b1 枚を手札に加える。 #y式鬼 は追加で #b3 ブロックを得る。"
+      "戦闘開始時、 #y式鬼 を #b1 枚手札に加える。 #y式鬼 は追加で #b3 ブロックを得る。"
     ]
   },
   "aigisMod:SerpentPoison": {
     "NAME": "蛇霊の呪毒",
     "FLAVOR": "「まじないは毒にも薬にもなるの。ふふふ、これはどちらかしらぁ？」-オロチヒメ",
     "DESCRIPTIONS": [
-      "戦闘開始時、 全ての敵に #yカースボイス #b2 を与える。 敵が攻撃した時、 #y毒 #b1 を与える。"
+      "戦闘開始時、 敵全体に #yカースボイス #b2 を与える。 攻撃を受けた時、 #y毒 #b1 を与える。"
     ]
   },
   "aigisMod:Ifrit": {
     "NAME": "イフリート",
     "FLAVOR": "「いでよ、炎の召喚獣イフリート！」-ソラノ",
     "DESCRIPTIONS": [
-      "戦闘開始時、全ての敵に #yバーン #b6 を与える。"
+      "戦闘開始時、敵全体に #yバーン #b6 を与える。"
     ]
   },
   "aigisMod:UndeadWorld": {
@@ -343,7 +343,7 @@
     "FLAVOR": "「人間の体って不便だわぁ。これが生きるってことなのね。」-メトゥス",
     "DESCRIPTIONS": [
       "戦闘開始時、 #yスケルトン #b3 枚と #yメトゥス #b1 枚を廃棄山に加える。 ",
-      "1戦闘に1回、 HPが最大の #b30% 以下の時、このレリックを #y右クリック することで、廃棄山の #yアンデッド #b1 枚を手札に加える"
+      "1戦闘に1回、 HPが最大の #b30% 以下の時、このレリックを #y右クリック することで、廃棄山の #yアンデッド カードを #b1 枚手札に加える"
     ]
   },
   "aigisMod:Daywalker": {
@@ -351,7 +351,7 @@
     "FLAVOR": "「吸血鬼の前の記憶？覚えてないの……。」-エデン",
     "DESCRIPTIONS": [
       "#y麻痺毒 のターン毎の減少が #b3 になる。",
-      "#y麻痺毒 を持つ敵に攻撃した時、 仮初のHPを #b1 得る。"
+      " #y麻痺毒 を持つ敵に攻撃した時、 #y仮初のHP を #b1 得る。"
     ]
   },
   "aigisMod:BastetGem": {
@@ -369,7 +369,7 @@
 
 
   "aigisMod:ArmoredDecius": {
-    "NAME": "アーマードデシウス",
+    "NAME": "アーマーデシウス",
     "FLAVOR": "「デシウスは勝つためには手段を選ばない、すっごく卑劣な男なんです！」-ミーティア",
     "DESCRIPTIONS": [
       "最初の #b4 ターンはターン終了時、 #b5 #yブロック を得る。",
@@ -380,7 +380,7 @@
     "NAME": "大爪デシウス",
     "FLAVOR": "「――嗚呼、星の声が聞こえる。何と美しい、調べなのだろうか……。」-デシウス",
     "DESCRIPTIONS": [
-      "#pアーマードデシウス と置き換える。 デッキに大爪形態を #b1 枚 追加する。",
+      "#pアーマーデシウス と置き換える。 デッキに大爪形態を #b1 枚 追加する。",
       "1マップに1回、戦闘中に HP が #b0 になった時 #b35 HP を得る。 "
     ]
   },
@@ -397,14 +397,14 @@
     "FLAVOR": "「この力が魔の力でも、私がすべきことは変わらない。」-コーネリア",
     "DESCRIPTIONS": [
       "1ターンに1回、アタックをプレイした時、 #b3 #yブロック を得る。",
-      "1戦闘に1回、 #yダーク #yファイター をプレイした時、 #yバッファー #b1 を得る。"
+      "1戦闘に1回、 #yダーク #yファイター カードをプレイした時、 #yバッファー #b1 を得る。"
     ]
   },
   "aigisMod:ShieldBless": {
     "NAME": "シールドブレス",
     "FLAVOR": "「闇に堕ちた剣とて、輝きを守護することはできましょう。」-ヘイオス",
     "DESCRIPTIONS": [
-      "#yダーク #yファイター をプレイした時、 #yトゲ #b1 を得る。",
+      "#yダーク #yファイター カードをプレイした時、 #yトゲ #b1 を得る。",
       " あなたの #yHP が #b50% 以下の間、 #y敏捷性 #b2 を得る。"
     ]
   },
@@ -419,7 +419,7 @@
     "NAME": "爆砕強化の秘術",
     "FLAVOR": "「魔力の精髄を極めること それが私の使命です。」-ガラニア",
     "DESCRIPTIONS": [
-      "戦闘開始時、敵が #b2 体以上の時、 #y流星 #b1 を #y生成 する。",
+      "戦闘開始時に敵が #b2 体以上の時、 #y流星 #b1 を #y生成 する。",
       " 戦闘中敵が追加された時、 #y流星 #b1 を #y生成 する。"
     ]
   },
@@ -427,7 +427,7 @@
     "NAME": "怪力爆砕鉄球",
     "FLAVOR": "「鎧のせいかな…筋肉が疲れてるみたいだ。」-ディーナ",
     "DESCRIPTIONS": [
-      "あなたのターン終了時、 あなたの #yブロック が #b16 以上の場合、すべての敵に #b10 ダメージを与える。"
+      "あなたのターン終了時にあなたの #yブロック が #b16 以上の場合、敵全体に #b10 ダメージを与える。"
     ]
   },
   "aigisMod:SealRelease": {
@@ -441,7 +441,7 @@
     "NAME": "不屈の叛逆者",
     "FLAVOR": "「千年如きでは、人の愚かしさも、優しさも変わらないということか。」-シャディア",
     "DESCRIPTIONS": [
-      "プレイヤーの #b5 ターン目終了時まで、 #yHP ダメージを受けていない場合、すべての敵に #b50 ダメージを与える。"
+      "プレイヤーの #b5 ターン目終了時まで、 #yHP ダメージを受けていない場合、敵全体に #b50 ダメージを与える。"
     ]
   },
   "aigisMod:HolyAura": {
@@ -462,92 +462,92 @@
 
 
   "aigisMod:Endurance": {
-    "NAME": "Endurance Up",
-    "FLAVOR": "Dan: Reaching beyond my limits is my reason for living!",
+    "NAME": "体力アップ",
+    "FLAVOR": "「越える目標があることが俺の生きがいだ。」-ダン",
     "DESCRIPTIONS": [
-      "Gain #b2 #yTemporal #yHP when you play a card that was created in combat.",
-      "Usable up to #b5 times per turn."
+      "戦闘中に生成したカードをプレイした時、 #y仮初のHP  #b2 を得る。",
+      " #b1 ターンに #b5 回まで発動する。"
     ]
   },
   "aigisMod:Miracle": {
-    "NAME": "Miracle Man",
-    "FLAVOR": "Goddess Aigis: Don't give up, humans. For now, I, Goddess Aigis, will lend you my power.",
+    "NAME": "奇跡の男",
+    "FLAVOR": "「――あきらめてはなりません、人の子よ。今より、この女神アイギスが力を貸しましょう！」-女神アイギス",
     "DESCRIPTIONS": [
-      "Gain #b3 #yTemporal #yHP when you play a card that was created in combat.",
-      "Usable up to #b5 times per turn."
+      "戦闘中に生成したカードをプレイした時、 #y仮初のHP  #b3 を得る。",
+      " #b1 ターンに #b5 回まで発動する。"
     ]
   },
   "aigisMod:DepthTorpedo": {
-    "NAME": "Depth Torpedo",
-    "FLAVOR": "Wirbel: I wish I could dive into people's minds and solve everything.",
+    "NAME": "デプストーピード",
+    "FLAVOR": "「人の心にも、ささっと潜って、 全部解決出来たらいいのになぁ。」-ヴィアベル",
     "DESCRIPTIONS": [
-      "The first time in a combat you lose HP while you have #yWater #yPressure, all enemies lose #b2 #yStrength."
+      "1戦闘に1回、 あなたが #y水圧 を持った状態でHPを失った時、 全ての敵は #y筋力 #b2 を失う。"
     ]
   },
   "aigisMod:SharkTide": {
-    "NAME": "Shark Tide",
-    "FLAVOR": "Fine: I came from an underwater city. I'll do my best to study the dry land!",
+    "NAME": "シャークタイド",
+    "FLAVOR": "「海底都市より参りました。乾いた地のお勉強、頑張ります！」-フィーネ",
     "DESCRIPTIONS": [
-      "Gain [E] at the start of turn if you have #b2 or more #yWater #yPressure."
+      "ターン開始時にあなたが #b2 以上の #y水圧 を持つ時、 [E] を得る。"
     ]
   },
   "aigisMod:AerialFight": {
-    "NAME": "Rampage Takeoff",
-    "FLAVOR": "Krehl: I'm Krehl, the Security Forces Flight Commander. Um, can I go now?",
+    "NAME": "ランペイジ・テイクオフ",
+    "FLAVOR": "「警備部隊飛行隊長のクレールです。あの、もういいですか？」-クレール",
     "DESCRIPTIONS": [
-      "Draw #b1 card when you draw an #yAir #ySignal. Usable #yTwice per turn and while you have cards in your #ydraw #ypile."
+      "#y山札 がある状態で #yエアーシグナル を引いた時、 #b1 枚引く。 この効果は #b1 ターンに #b2 回まで発動する。"
     ]
   },
   "aigisMod:CaitSith": {
-    "NAME": "Cait Sith",
-    "FLAVOR": "Farne: I'm reading right now. ...Don't interrupt me.",
+    "NAME": "ケットシー",
+    "FLAVOR": "「今、本読んでるの。 ⋯⋯邪魔しないでよね。」-ファルネ",
     "DESCRIPTIONS": [
-      "Every #b10th #ycard #ycreated in a single combat (except in exhaust pile), add #b1 #yCait #ySith to your #yhand."
+      "この戦闘で カードを #b10 枚生成 （廃棄山に生成したものは除く） するたび、 #yケットシ― を #b1 枚 #y手札 に加える。"
     ]
   },
   "aigisMod:PumpUp": {
-    "NAME": "Pump Up",
-    "FLAVOR": "Gina: Men are so one-dimensional, eh?",
+    "NAME": "パンプアップ",
+    "FLAVOR": "「男って単純よね～？」-ジーナ",
     "DESCRIPTIONS": [
-      "At the start of your #b3rd turn, gain #b3 #yVigor, #b3 #yTemporal #yHP and #yHeal #b3 #yHP."
+      "あなたの #b3 ターン目開始時、 #y活力 #b3 と #y仮初のHP #b3 を得て #gHP を #b3 回復する。"
     ]
   },
   "aigisMod:AutoHeal": {
-    "NAME": "Auto Heal",
-    "FLAVOR": "Ur: With these claws, I can even defeat demons!",
+    "NAME": "オートヒール",
+    "FLAVOR": "「この爪で魔物だって倒しちゃうもんね！」-ウル",
     "DESCRIPTIONS": [
-      "At the start of your turn, deal #b1 #ydamage to ALL #yenemies. ",
-      "At the end of your turn, gain #b1 #yTemporal #yHP."
+      "ターン開始時、 敵全体に #b1 #yダメージ を与える。 ",
+      "ターン終了時、 #y仮初のHP  #b1 を得る。"
     ]
   },
   "aigisMod:PearlGrace": {
-    "NAME": "Pearls' Grace",
-    "FLAVOR": "Ritva: There are many strong warriors in the deep sea. I must learn from them...!",
+    "NAME": "パールズグレース",
+    "FLAVOR": "「深海の戦士には強者がいっぱい。わたしも見習わないと⋯⋯！	」-リトヴァ",
     "DESCRIPTIONS": [
-      "At the start of the combat, apply #b1 #yWater #bPressure to ALL #yenemies.",
-      "Whenever you play #yDeep #bSea, deal #y3 #ydamage to a #yrandom #yenemy."
+      "戦闘開始時、 敵全体に #y水圧 #b1 を与える。",
+      " #y深海 をプレイした時、 ランダムな敵に #b3 #yダメージ を与える。"
     ]
   },
   "aigisMod:FiringCommand": {
-    "NAME": "Firing Command",
-    "FLAVOR": "Reanbell: As long as I am with you, any disadvantage turns into an advantage.",
+    "NAME": "射撃指揮",
+    "FLAVOR": "「私がいれば、不利な状況すら有利に変えてみせる。」-リーンベル",
     "DESCRIPTIONS": [
-      "#ySailor cards apply their full effects even if #yWater #bPressure is not reduced."
+      "#y水兵 カードが #y水圧 に関係なく全ての効果を発動する。"
     ]
   },
   "aigisMod:VitalityMedicine": {
-    "NAME": "Secret Medicine of Vitality",
-    "FLAVOR": "Nicole: First of all, let's convert this place into an atelier. Assistant, can you bring my luggage?",
+    "NAME": "活力の秘薬",
+    "FLAVOR": "「まずはここをアトリエに改造っと。助手ちゃーん荷物もってきてー？」-ニコル",
     "DESCRIPTIONS": [
-      "#yCancel any #yDamage coming from yourself during the #yfirst #b2 #yturns of each combat. ",
-      "Gain #y1 #yPotion #ySlot."
+      "獲得時、ポーションスロットを #b1 つ得る。",
+      " 戦闘開始から #b2 ターンの間、 自傷ダメージを受けない。"
     ]
   },
   "aigisMod:AigisStatue": {
-    "NAME": "Aigis Statue",
-    "FLAVOR": "Anna: But you can draw out her summon ability.",
+    "NAME": "アイギスの像",
+    "FLAVOR": "「けれど、あなたには女神様の召喚能力を引き出す奇跡が起こせる。」-アンナ",
     "DESCRIPTIONS": [
-      "Create a number of #yAigis #yStatue at the start of combat. Increase this amount by #b2 at the end of combat."
+      "戦闘開始時に #yアイギス像 を山札に 複数 加える。 生成枚数は戦闘が終了するたびに #b2 増加する。"
     ]
   },
 
@@ -596,7 +596,7 @@
     "NAME": "アイギス神殿",
     "FLAVOR": "英雄に対し、人々は1つの大きな神殿を立てた。――そう、女神アイギスを祭る神殿である。",
     "DESCRIPTIONS": [
-      "Receive an extra #ycard #yreward on normal and elite combats, which contains up to #b3 cards from the other #yAigis characters."
+      "通常敵とエリート敵の報酬に、 他の #yアイギス クラス カード の #b3 択が追加される。"
     ]
   }
 }
